# foggle

./: .gitignore  config.yml  docker-compose.yml  main.py  pyproject.toml
src/: api_manager.py  core.py  feed.py  stream.py  types.py
src/exchanges/: base.py
src/exchanges/hyperliquid/: api.py  exchange.py  hl.py  info.py  rounding.py  signing.py  types.py  websocket_manager.py
src/exchanges/ibkr/: client.py  connection.py  contract.py  decoder.py  ib.py  objects.py  order.py  ticker.py  util.py  wrapper.py
src/newswatch/: newswatch.py  trading_econ.py
src/store/timescaledb/: db.py
src/store/timescaledb/migrations/: 000001_init_schema.up.sql
src/utils/: ring_buffer.py  ring_buffer_test.py
src/visualizer/: plotter.py
