[project]
name = "foggle"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiodns>=3.2.0",
    "aiohttp>=3.11.14",
    "asyncpg>=0.30.0",
    "brotli>=1.1.0",
    "bs4>=0.0.2",
    "eth-account>=0.13.5",
    "eth-utils>=5.2.0",
    "matplotlib>=3.10.1",
    "msgpack>=1.1.0",
    "nest-asyncio>=1.6.0",
    "numba>=0.61.0",
    "numpy>=2.1.3",
    "orjson>=3.10.15",
    "pandas>=2.2.3",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "typing-extensions>=4.12.2",
    "uvloop>=0.21.0",
    "websockets>=15.0.1",
]
